2002-03-26  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Source/NSBundleAdditions.m 
	([NSNibOutletConnector -establishConnection]): 
	Only capitalize the first letter of the outlet in order to have
	the accessor method's name.
	* Source/NSTableView.m ([NSTableView initWithCoder:]):
	Use @"NSTableView" insted of NSStringFromClass([self class]) when
	looking for version. Call -tile to set up everything properly.
	* Source/NSScrollView.m ([NSScrollView encodeWithCoder:] &
	[NSScrollView initWithCoder:]):
	Encode/decode _hasHeaderView, _hasCornerView & _headerClipView.
	Don't recreate cornerView & headerView at decoding time, because
	they are encoded by NSView anyway.

Tue Mar 26 14:33:24 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSTable.m: Removed GSTransparentView and replaced it with
	a simple NSView.
	* Headers/gnustep/gui/GSTable.h: Idem.
	
2002-03-24  Adam Fedor  <fedor@gnu.org>

	* Source/NSStringDrawing.m (drawRun): Use new unicode functions
	for string conversion (patch from yjchen@ms7.url.com.tw).

Mon Mar 25 00:12:05 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSSimpleLayoutManager.m ([-setNeedsDisplayForLineRange:inTextContainer:]): 
	Fixed typo introduced by me in last change (reported by Alexander
	Malmberg).
	
2002-03-23  Adam Fedor  <fedor@gnu.org>

	* Version: 0.7.6

Sat Mar 23 21:49:10 2002  Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSOutlineView.m: Minor cleanup.   Removed some unecessary
	NSLog statements.

Sat Mar 23 11:34:10 2002  Gregory John Casamento <greg_casamento@yahoo.com>
	
	* Headers/gnustep/gui/NSOutlineView.h: Added dictionary to speed
	up generation of the _items list.  Also, this keeps the outline view
	from being updated without an explicit call to reloadData.

	* Source/NSOutlineView.m: Implemented -[NSOutlineView reloadItem:]
	and -[NSOutlineView reloadItem:reloadChildren:] and improved
	-[NSOutlineView reloadData]

Fri Mar 22 13:09:03 2002  Nicola Pero  <n.pero@mi.flashnet.it>
