@@ -1,3 +1,10 @@
+2002-03-27  Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Source/NSOutlineView.m make more efficient for large sets of
+	items
+	* Headers/gnustep/gui/NSOutlineView.h Added new ivar to cache
+	item level information.
+	
 2002-03-26  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
 
 	* Source/NSBundleAdditions.m 
